--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,4 +3,7 @@ apply plugin: 'java'
 dependencies {
     compile 'com.google.code.findbugs:jsr305:3.0.0'
     compile 'com.google.guava:guava:18.0'
+
+    targetCompatibility = '1.7'
+    sourceCompatibility = '1.7'
 }
